feat: add login page layout and styles

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="app-container">
+  <aside>
+    <img src="assets/payment.svg"
+      alt="Ilustração de um homem de pele escura segurando um cartão de crédito na cor verde">
+  </aside>
+
+  <main>
+    <div class="greeting">
+      <h1>Boas vindas!</h1>
+      <p class="app-text-muted">
+        Aqui você poderá fazer o acompanhamento de toda a sua vida financeira de forma simples e
+        muito mais :)
+      </p>
+    </div>
+
+    <form>
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="exemplo@email.com">
+        <mat-icon matPrefix>mail_outline</mat-icon>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Senha</mat-label>
+        <input matInput placeholder="exemplo@email.com">
+        <mat-icon matPrefix>lock_outline</mat-icon>
+      </mat-form-field>
+    </form>
+  </main>
+</div>
