--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -1,3 +1,6 @@
-@import './reset';
-@import './typography';
+@import './rem-calc';
 @import './color_theme';
+@import './reset';
+
+@import './typography';
+@import './utilities';
