--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -1,6 +1,7 @@
-@import './rem-calc';
-@import './color_theme';
-@import './reset';
+@import "./rem-calc";
+@import "./color_theme";
+@import "./reset";
 
-@import './typography';
-@import './utilities';
+@import "./typography";
+@import "./utilities";
+@import "./material-theme.scss";
