--- a/src/app/modules/auth/pages/login/login.component.scss
+++ b/src/app/modules/auth/pages/login/login.component.scss
@@ -1,67 +1,35 @@
 @import "../../../../styles/rem-calc";
 
-.max-content-area {
-  max-width: rem-calc(350);
+.centralize {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.app-container {
-  height: 100vh;
-  padding: rem-calc(65 40);
+.full-height {
+  height: 85vh;
+}
 
+.surface {
+  background-color: var(--surface);
+}
+
+.illustration-container {
   display: flex;
+  justify-content: center;
 
-  aside {
-    height: inherit;
+  padding: rem-calc(0 32);
 
-    flex: 5;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
-
-    img {
-      max-width: 100%;
-      width: 460px;
-      margin: 0 auto;
-    }
+  img {
+    max-width: 100%;
+    width: rem-calc(520);
   }
+}
 
-  main {
-    flex: 4;
+main {
+  form {
+    margin-top: rem-calc(65);
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
-
-    padding: rem-calc(0 15);
-
-    h1 {
-      font-size: rem-calc(32);
-      font-weight: 300;
-    }
-
-    .greeting {
-      @extend .max-content-area;
-    }
-
-    form {
-      @extend .max-content-area;
-
-      margin-top: rem-calc(20);
-      display: flex;
-      flex-direction: column;
-
-      mat-icon {
-        color: var(--textVariant);
-      }
-
-      mat-form-field {
-        mat-label {
-          margin-left: rem-calc(5);
-        }
-
-        color: var(--textVariant);
-      }
-    }
   }
 }
