--- a/src/app/shared/components/atoms/form-field/form-field.component.html
+++ b/src/app/shared/components/atoms/form-field/form-field.component.html
@@ -1,18 +1,26 @@
 <mat-form-field appearance="outline">
   <mat-label>{{ label }}</mat-label>
-  <input matInput *ngIf="!obscureText" placeholder="{{ placeholder }}" />
+  <input
+    matInput
+    *ngIf="!obscureText"
+    placeholder="{{ placeholder }}"
+    [formControl]="inputFormControl"
+  />
   <input
     matInput
     *ngIf="obscureText"
     [type]="hideText ? 'password' : 'text'"
     placeholder="{{ placeholder }}"
+    [formControl]="inputFormControl"
   />
+
   <mat-icon matPrefix *ngIf="prefixIcon">{{ prefixIcon }}</mat-icon>
   <button
     *ngIf="obscureText"
     mat-icon-button
     matSuffix
-    (click)="togleInputVisibility()">
+    (click)="togleInputVisibility()"
+  >
     <mat-icon>{{ hideText ? "visibility_off" : "visibility" }}</mat-icon>
   </button>
 </mat-form-field>
