--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -4,4 +4,5 @@
 
 @import "./typography";
 @import "./utilities";
-@import "./material-theme.scss";
+@import "./material-theme";
+@import "./material-styles";
