test: add auth service unit tests

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -46,7 +46,7 @@
             />
 
             <mat-icon matPrefix>lock_outline</mat-icon>
-            <button mat-icon-button matSuffix (click)="togleInputVisibility()">
+            <button mat-icon-button matSuffix (click)="togleInputVisibility()" type="button">
               <mat-icon>{{
                 hideText ? "visibility_off" : "visibility"
               }}</mat-icon>
