test: add login component unit tests

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -31,6 +31,7 @@
             <input
               matInput
               placeholder="exemplo@email.com"
+              name="email"
               formControlName="email"
             />
             <mat-icon matPrefix>mail_outline</mat-icon>
@@ -42,6 +43,7 @@
               [type]="hideText ? 'password' : 'text'"
               matInput
               placeholder="Digite sua senha"
+              name="password"
               formControlName="password"
             />
 
