--- a/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,1 +1,11 @@
-<p>sidebar works!</p>
+<aside>
+  <app-logo type="gray"></app-logo>
+
+  <ul>
+    <li *ngFor="let item of menuItems">
+      <a data-test="menu">
+        <span>{{ item.showName }}</span>
+      </a>
+    </li>
+  </ul>
+</aside>
