--- a/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,13 +1,21 @@
 <aside>
-  <app-logo type="gray"></app-logo>
+  <div>
+    <app-logo type="gray"></app-logo>
 
-  <ul>
-    <li *ngFor="let item of menuItems">
-      <a data-test="menu">
-        <span>{{ item.showName }}</span>
-      </a>
-    </li>
-  </ul>
+    <ul class="mt-5">
+      <li *ngFor="let item of menuItems">
+        <a data-test="menu">
+          <mat-icon>{{ item.icon }}</mat-icon>
+          <span>{{ item.showName }}</span>
+        </a>
+      </li>
+    </ul>
+  </div>
 
-  <app-theme-switcher></app-theme-switcher>
+  <div data-test="exit-button">
+    <button mat-button (click)="logout()">
+      <mat-icon>logout</mat-icon>
+      <span>Sair</span>
+    </button>
+  </div>
 </aside>
