feat(sidebar component): add menu items routerLink attribute and active css class

--- a/src/app/shared/components/layouts/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/layouts/sidebar/sidebar.component.scss
@@ -44,6 +44,20 @@ aside {
     span {
       color: var(--textVariant);
     }
+
+    a {
+      text-decoration: none;
+    }
+
+    .active {
+      color: var(--primary);
+      text-decoration: none;
+
+      mat-icon,
+      span {
+        color: var(--primary);
+      }
+    }
   }
 
   button {
