--- a/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -4,7 +4,11 @@
 
     <ul class="mt-5">
       <li *ngFor="let item of menuItems">
-        <a data-test="menu">
+        <a
+          data-test="menu"
+          routerLink="{{ item.routeName }}"
+          routerLinkActive="active"
+        >
           <mat-icon>{{ item.icon }}</mat-icon>
           <span>{{ item.showName }}</span>
         </a>
