refactor(db.json): change db.json routes and readme.md file

--- a/src/app/modules/main-app/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/main-app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,30 @@
-<p>dashboard works!</p>
+<main>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Painel</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <div class="transaction-resum-container mt-4">
+          <div class="resum-item">
+            <span>Entradas</span>
+            <strong>R$ 200</strong>
+          </div>
+
+          <div class="resum-item">
+            <span>Saídas</span>
+            <strong>R$ 50</strong>
+          </div>
+
+          <div class="resum-item">
+            <span>Diferença</span>
+            <strong>R$ 150</strong>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
