--- a/src/app/modules/main-app/pages/main/main.component.html
+++ b/src/app/modules/main-app/pages/main/main.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <aside class="col-4">
+    <aside class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
       <app-sidebar></app-sidebar>
     </aside>
 
-    <main class="col-8">
+    <main class="col-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">
       <router-outlet></router-outlet>
     </main>
   </div>
