--- a/src/app/modules/main-app/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/main-app/pages/dashboard/dashboard.component.html
@@ -11,7 +11,9 @@
         <div class="transaction-resum-container mt-4">
           <div class="resum-item">
             <span>Entradas</span>
-            <strong>R$ 200</strong>
+            <strong>{{
+              totalIncomingAmount | currency: "BRL":true:"1.2-2"
+            }}</strong>
           </div>
 
           <div class="resum-item">
