--- a/src/app/modules/main-app/pages/transactions/transactions.component.html
+++ b/src/app/modules/main-app/pages/transactions/transactions.component.html
@@ -1,1 +1,17 @@
-<p>transactions works!</p>
+<main>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Transações</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <div class="table-container mt-5">
+          <app-c-table></app-c-table>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
