--- a/src/app/modules/main-app/pages/dashboard/dashboard.component.scss
+++ b/src/app/modules/main-app/pages/dashboard/dashboard.component.scss
@@ -41,4 +41,12 @@ main {
       }
     }
   }
+
+  .table-container {
+    background-color: var(--surface);
+    border-radius: rem-calc(15);
+
+    height: 100%;
+    padding: rem-calc(40 25);
+  }
 }
