feat: add `paginatedTransactions` to the table

--- a/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -7,9 +7,8 @@
         <a
           data-test="menu"
           routerLink="{{ item.routeName }}"
-          routerLinkActive="active"
-        >
-          <mat-icon>{{ item.icon }}</mat-icon>
+          routerLinkActive="active">
+          <mat-icon class="material-icons-outlined">{{ item.icon }}</mat-icon>
           <span>{{ item.showName }}</span>
         </a>
       </li>
