--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -1,15 +1,12 @@
 <mat-form-field appearance="standard">
   <mat-label>Pesquisar</mat-label>
-  <input
-    matInput
-    (keyup)="applyFilter($event)"
-    placeholder="Pesquise por descrição..."
-    #input
-  />
+  <input matInput (keyup)="applyFilter($event)" placeholder="Pesquise por
+    descrição..." #input />
 </mat-form-field>
 
 <div>
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table mat-table [dataSource]="dataSource" matSort matSortActive="date"
+    matSortDisableClear matSortDirection="desc">
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Data</th>
       <td mat-cell *matCellDef="let row">{{ row.date | date }}</td>
@@ -25,18 +22,27 @@
         Tipo da transação
       </th>
       <td mat-cell *matCellDef="let row">
-        <span *ngIf="row.type === 'incoming'" class="text-success">Entrada</span>
-        <span *ngIf="row.type === 'expense'" class="text-danger">Saída</span>
+        <div class="transaction-type">
+          <mat-icon>sell</mat-icon>
+          <span *ngIf="row.type === 'incoming'" class="text-success">
+            Entrada
+          </span>
+          <span *ngIf="row.type === 'expense'" class="text-danger">
+            Saída
+          </span>
+        </div>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
-      <td mat-cell *matCellDef="let row">{{ row.amount | currency: "BRL":true:"1.2-2" }}</td>
+      <td mat-cell *matCellDef="let row">
+        {{ row.amount | currency: "BRL":true:"1.2-2" }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ação</th>
+      <th mat-header-cell *matHeaderCellDef matSortDisabled>Ação</th>
       <td mat-cell *matCellDef="let row"></td>
     </ng-container>
 
@@ -48,8 +54,7 @@
     </tr>
   </table>
 
-  <mat-paginator
-    [pageSizeOptions]="[5, 10]"
-    aria-label="Seleciona uma página de resultados"
-  ></mat-paginator>
+  <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10]"
+    aria-label="Seleciona uma página de resultados">
+  </mat-paginator>
 </div>
