--- a/src/app/modules/main-app/pages/transactions/transactions.component.html
+++ b/src/app/modules/main-app/pages/transactions/transactions.component.html
@@ -6,9 +6,19 @@
       </div>
     </div>
 
+    <div class="row mt-5">
+      <div class="col-12 d-flex justify-content-end">
+        <button
+          mat-flat-button
+          color="primary">
+          Nova Transação
+        </button>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-12">
-        <div class="table-container mt-5">
+        <div class="table-container mt-4">
           <app-c-table></app-c-table>
         </div>
       </div>
