--- a/src/app/shared/components/molecules/c-table/c-table.component.scss
+++ b/src/app/shared/components/molecules/c-table/c-table.component.scss
@@ -13,3 +13,15 @@ table {
 mat-paginator {
   background-color: transparent;
 }
+
+.transaction-type {
+  display: flex;
+  align-items: center;
+
+  mat-icon {
+    font-size: rem-calc(15);
+    color: var(--textVariant);
+
+    padding-top: rem-calc(5);
+  }
+}
