--- a/src/app/modules/main-app/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/main-app/pages/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
     <div class="row">
       <div class="col-12">
         <div class="table-container mt-5">
-          <!-- <app-c-table [tableData]="transactions$ | async"></app-c-table> -->
+          <app-line-chart></app-line-chart>
         </div>
       </div>
     </div>
