--- a/src/app/shared/components/atoms/button/button.component.html
+++ b/src/app/shared/components/atoms/button/button.component.html
@@ -1,6 +1,15 @@
 <button
+  *ngIf="type === 'primary'"
   mat-flat-button
   color="primary"
+  [disabled]="disabled"
+  (click)="onClickHandler()">
+  {{ label }}
+</button>
+
+<button
+  *ngIf="type === 'text'"
+  mat-button
   [disabled]="disabled"
   (click)="onClickHandler()">
   {{ label }}
