refactor(transaction-modal): change dialog material to toastr message

--- a/src/app/modules/main-app/pages/transactions/components/new-transaction-dialog/new-transaction-dialog.component.html
+++ b/src/app/modules/main-app/pages/transactions/components/new-transaction-dialog/new-transaction-dialog.component.html
@@ -40,7 +40,11 @@
       type="text">
     </app-button>
 
-    <app-button (onClickedEvent)="saveTransaction()" label="Salvar"
+    <app-loading-button *ngIf="pageState == PageStateType.loading">
+    </app-loading-button>
+
+    <app-button *ngIf="pageState != PageStateType.loading"
+      (onClickedEvent)="saveTransaction()" label="Salvar"
       [disabled]="newTransactionForm.invalid"></app-button>
   </div>
 </div>
