--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -50,7 +50,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">Oops! Sem resultados</td>
+      <td class="mat-cell" colspan="4">Oops! Sem resultados...</td>
     </tr>
   </table>
 
