--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -43,7 +43,14 @@
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef matSortDisabled>Ação</th>
-      <td mat-cell *matCellDef="let row"></td>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="editTransaction(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="deleteTransaction(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
