--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -45,10 +45,10 @@
       <th mat-header-cell *matHeaderCellDef matSortDisabled>Ação</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button (click)="editTransaction(row)">
-          <mat-icon>edit</mat-icon>
+          <mat-icon class="edit">edit</mat-icon>
         </button>
         <button mat-icon-button (click)="deleteTransaction(row)">
-          <mat-icon>delete</mat-icon>
+          <mat-icon class="delete">delete</mat-icon>
         </button>
       </td>
     </ng-container>
