refactor: add material warn pallete colors and create chart service

--- a/src/app/shared/components/atoms/button/button.component.html
+++ b/src/app/shared/components/atoms/button/button.component.html
@@ -1,6 +1,7 @@
 <button
-  *ngIf="type === 'primary'"
   mat-flat-button
+  color="primary"
+  *ngIf="type === 'primary'"
   [disabled]="disabled"
   (click)="onClickHandler()">
   {{ label }}
