--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -47,7 +47,7 @@
         <button mat-icon-button (click)="editTransaction(row)">
           <mat-icon class="edit">edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="deleteTransaction(row)">
+        <button mat-icon-button color="warn" (click)="deleteTransaction(row)">
           <mat-icon class="delete">delete</mat-icon>
         </button>
       </td>
