--- a/src/app/styles/_material-theme.scss
+++ b/src/app/styles/_material-theme.scss
@@ -1,5 +1,7 @@
+@use '@angular/material' as mat;
+@include mat.core();
+
 @import "~@angular/material/theming";
-@include mat-core();
 
 $dark-primary-text: rgba(black, 0.87);
 $dark-secondary-text: rgba(black, 0.54);
@@ -73,9 +75,23 @@ $cash-app-warn-palette: (
   ),
 );
 
+$angular-dark-theme: mat-define-dark-theme(
+  (
+    color: (
+      primary: $cash-app-palette,
+      accent: $cash-app-palette,
+      warn: $cash-app-warn-palette,
+    ),
+  )
+);
+
 $my-app-primary: mat-palette($cash-app-palette, 500);
 $my-app-accent: mat-palette($mat-green, 500, 900, A100);
 $my-app-warn: mat-palette($cash-app-warn-palette);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include angular-material-theme($my-app-theme);
+
+.dark-mode-material {
+  @include mat.all-component-colors($angular-dark-theme);
+}
