feat: add angular dark theme with material-theme and css vars

--- a/src/app/modules/main-app/pages/settings/settings.component.html
+++ b/src/app/modules/main-app/pages/settings/settings.component.html
@@ -1,1 +1,18 @@
-<p>settings works!</p>
+<main>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Configurações</h1>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-12">
+        <div class="setting-tile">
+          <p class="mx-4">Ativar modo escuro</p>
+          <mat-slide-toggle color="primary" (click)="toggle()"></mat-slide-toggle>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
