--- a/src/app/styles/_color_theme.scss
+++ b/src/app/styles/_color_theme.scss
@@ -13,7 +13,7 @@ $textColorDark: #828282;
 $warn: #b84a62;
 $info: #68b0ab;
 
-:root {
+.light-theme {
   --primary: #{$primay};
   --gradient: #{$gradient};
   --warn: #{$warn};
