--- a/src/app/modules/main-app/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/main-app/pages/dashboard/dashboard.component.html
@@ -11,23 +11,23 @@
         <div class="transaction-resum-container mt-4">
           <div class="resum-item">
             <span>Entradas</span>
-            <strong>{{
-              totalIncomingAmount | currency: "BRL":true:"1.2-2"
-            }}</strong>
+            <strong>
+              {{ totalIncomingAmount | currency: "BRL":true:"1.2-2" }}
+            </strong>
           </div>
 
           <div class="resum-item">
             <span>Saídas</span>
-            <strong>{{
-              totalExpenseAmount | currency: "BRL":true:"1.2-2"
-            }}</strong>
+            <strong>
+              {{ totalExpenseAmount | currency: "BRL":true:"1.2-2" }}
+            </strong>
           </div>
 
           <div class="resum-item">
             <span>Diferença</span>
-            <strong>{{
-              differenceAmount | currency: "BRL":true:"1.2-2"
-            }}</strong>
+            <strong>
+              {{ differenceAmount | currency: "BRL":true:"1.2-2" }}
+            </strong>
           </div>
         </div>
       </div>
