--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -24,10 +24,10 @@
       <td mat-cell *matCellDef="let row">
         <div class="transaction-type">
           <mat-icon>sell</mat-icon>
-          <span *ngIf="row.type === 'incoming'" class="text-success">
+          <span *ngIf="row.type === 'incoming'" class="incoming-state">
             Entrada
           </span>
-          <span *ngIf="row.type === 'expense'" class="text-danger">
+          <span *ngIf="row.type === 'expense'" class="expense-state">
             Saída
           </span>
         </div>
