--- a/src/app/styles/_material-theme.scss
+++ b/src/app/styles/_material-theme.scss
@@ -1,97 +1,17 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 @include mat.core();
 
 @import "~@angular/material/theming";
+@import "./material-palettes";
 
-$dark-primary-text: rgba(black, 0.87);
-$dark-secondary-text: rgba(black, 0.54);
-
-$light-primary-text: white;
-$light-secondary-text: rgba(white, 0.7);
-
-$cash-app-palette: (
-  50: #eaf6ea,
-  100: #cbe9cb,
-  200: #a9daa9,
-  300: #86cb86,
-  400: #6cbf6c,
-  500: #52b452,
-  600: #4bad4b,
-  700: #41a441,
-  800: #389c38,
-  900: #288c28,
-  A100: #cfffcf,
-  A200: #9cff9c,
-  A400: #69ff69,
-  A700: #4fff4f,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $dark-primary-text,
-    400: $dark-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $light-primary-text,
-    A400: $light-primary-text,
-    A700: $light-primary-text,
-  ),
-);
-
-$cash-app-warn-palette: (
-  50: #f6e9ec,
-  100: #eac9d0,
-  200: #dca5b1,
-  300: #cd8091,
-  400: #c3657a,
-  500: #b84a62,
-  600: #b1435a,
-  700: #a83a50,
-  800: #a03246,
-  900: #912234,
-  A100: #ffcfd6,
-  A200: #ff9caa,
-  A400: #ff697e,
-  A700: #ff4f68,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $dark-primary-text,
-    400: $dark-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $light-primary-text,
-    A400: $light-primary-text,
-    A700: $light-primary-text,
-  ),
-);
-
-$angular-dark-theme: mat-define-dark-theme(
-  (
-    color: (
-      primary: $cash-app-palette,
-      accent: $cash-app-palette,
-      warn: $cash-app-warn-palette,
-    ),
-  )
-);
-
-$my-app-primary: mat-palette($cash-app-palette, 500);
-$my-app-accent: mat-palette($mat-green, 500, 900, A100);
-$my-app-warn: mat-palette($cash-app-warn-palette);
+$my-app-primary: mat-palette($primary-app-palette, 500);
+$my-app-accent: mat-palette($accent-app-palette, 500, 900, A100);
+$my-app-warn: mat-palette($warn-app-palette);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include angular-material-theme($my-app-theme);
 
-.dark-mode-material {
-  @include mat.all-component-colors($angular-dark-theme);
+.dark-theme-material {
+  $angular-dark-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
+  @include angular-material-theme($angular-dark-theme);
 }
