--- a/src/app/shared/components/molecules/c-table/c-table.component.html
+++ b/src/app/shared/components/molecules/c-table/c-table.component.html
@@ -1,7 +1,8 @@
 <mat-form-field appearance="standard">
   <mat-label>Pesquisar</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Pesquise por
-    descrição..." #input />
+  <input matInput (keyup)="applyFilter($event)"
+    placeholder="Pesquise por descrição..." #input
+  />
 </mat-form-field>
 
 <div>
