--- a/src/app/shared/components/molecules/transaction-dialog/transaction-dialog.component.html
+++ b/src/app/shared/components/molecules/transaction-dialog/transaction-dialog.component.html
@@ -16,9 +16,26 @@
         </mat-select>
       </mat-form-field>
 
+      <mat-checkbox
+        *ngIf="transactionForm.get('type')?.value === 'incoming'"
+        formControlName="isPayedOrReceived"
+        class="mb-3"
+        labelPosition="after">
+        Recebido
+      </mat-checkbox>
+
+      <mat-checkbox
+        *ngIf="transactionForm.get('type')?.value === 'expense'"
+        formControlName="isPayedOrReceived"
+        class="mb-3"
+        labelPosition="after">
+        Pago
+      </mat-checkbox>
+
       <mat-form-field appearance="outline">
         <mat-label>Data</mat-label>
-        <input matInput [matDatepicker]="dp" formControlName="date" mask="99/99/9999">
+        <input matInput [matDatepicker]="dp" formControlName="date"
+          mask="99/99/9999">
         <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
         <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
