--- a/src/app/styles/_material-theme.scss
+++ b/src/app/styles/_material-theme.scss
@@ -15,3 +15,8 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
   $angular-dark-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
   @include angular-material-theme($angular-dark-theme);
 }
+
+.light-theme-material {
+  $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
+  @include angular-material-theme($my-app-theme);
+}
