--- a/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -5,9 +5,10 @@
     <ul class="mt-5">
       <li *ngFor="let item of menuItems">
         <a
-          data-test="menu"
           routerLink="{{ item.routeName }}"
-          routerLinkActive="active">
+          routerLinkActive="active"
+          attr.data-cy="button-{{ item.routeName }}"
+        >
           <mat-icon class="material-icons-outlined">{{ item.icon }}</mat-icon>
           <span>{{ item.showName }}</span>
         </a>
@@ -15,10 +16,8 @@
     </ul>
   </div>
 
-  <div data-test="exit-button">
-    <button mat-button (click)="logout()">
-      <mat-icon>logout</mat-icon>
-      <span>Sair</span>
-    </button>
-  </div>
+  <button mat-button (click)="logout()" data-cy="logout-button">
+    <mat-icon>logout</mat-icon>
+    <span>Sair</span>
+  </button>
 </aside>
