test(transaction.component): add transactions component e2e tests

--- a/src/app/modules/main-app/pages/transactions/transactions.component.html
+++ b/src/app/modules/main-app/pages/transactions/transactions.component.html
@@ -9,6 +9,7 @@
     <div class="row mt-5">
       <div class="col-12 d-flex justify-content-end">
         <app-button
+          data-cy="new-transaction-button"
           (onClickedEvent)="openNewTransactionDialog()"
           label="Nova Transação">
         </app-button>
