--- a/src/app/shared/components/molecules/transaction-dialog/transaction-dialog.component.html
+++ b/src/app/shared/components/molecules/transaction-dialog/transaction-dialog.component.html
@@ -1,5 +1,5 @@
-<div class="cash-modal">
-  <div class="cash-modal-header">
+<div class="cash-modal" data-cy="transaction-dialog">
+  <div class="cash-modal-header" data-cy="transaction-dialog-title">
     <h1 *ngIf="!data.isEdit">Nova transação</h1>
     <h1 *ngIf="data.isEdit">Editar transação</h1>
   </div>
@@ -9,60 +9,91 @@
       <mat-form-field appearance="outline">
         <mat-label>Tipo</mat-label>
         <mat-select
-          formControlName="type" placeholder="Selecione">
+          data-cy="transaction-dialog-type"
+          formControlName="type"
+          placeholder="Selecione"
+        >
           <mat-option *ngFor="let type of transactionType" [value]="type.value">
-            {{type.viewValue}}
+            {{ type.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-checkbox
         *ngIf="transactionForm.get('type')?.value === 'incoming'"
+        data-cy="transaction-dialog-payed-or-received"
         formControlName="isPayedOrReceived"
         class="mb-3"
-        labelPosition="after">
+        labelPosition="after"
+      >
         Recebido
       </mat-checkbox>
 
       <mat-checkbox
+        data-cy="transaction-dialog-payed-or-received"
         *ngIf="transactionForm.get('type')?.value === 'expense'"
         formControlName="isPayedOrReceived"
         class="mb-3"
-        labelPosition="after">
+        labelPosition="after"
+      >
         Pago
       </mat-checkbox>
 
       <mat-form-field appearance="outline">
         <mat-label>Data</mat-label>
-        <input matInput [matDatepicker]="dp" formControlName="date"
-          mask="99/99/9999">
+        <input
+          matInput
+          [matDatepicker]="dp"
+          formControlName="date"
+          data-cy="transaction-dialog-date"
+          mask="99/99/9999"
+        />
         <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
         <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Valor</mat-label>
-        <input matInput name="amount" formControlName="amount" />
+        <input
+          matInput
+          name="amount"
+          formControlName="amount"
+          data-cy="transaction-dialog-amount"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Descrição</mat-label>
-        <input matInput name="description" formControlName="description" />
+        <input
+          matInput
+          name="description"
+          formControlName="description"
+          data-cy="transaction-dialog-description"
+        />
       </mat-form-field>
-
     </form>
   </div>
 
   <div class="cash-modal-footer">
-    <app-button (onClickedEvent)="closeModal()" label="Cancelar"
-      type="text">
+    <app-button
+      (onClickedEvent)="closeModal()"
+      label="Cancelar"
+      data-cy="transaction-dialog-cancel"
+      type="text"
+    >
     </app-button>
 
-    <app-loading-button *ngIf="pageState == PageStateType.loading">
+    <app-loading-button
+      *ngIf="pageState == PageStateType.loading"
+      data-cy="loading-button">
     </app-loading-button>
 
-    <app-button *ngIf="pageState != PageStateType.loading"
-      (onClickedEvent)="saveOrUpdateTransaction()" label="Salvar"
-      [disabled]="transactionForm.invalid"></app-button>
+    <app-button
+      *ngIf="pageState != PageStateType.loading"
+      data-cy="transaction-dialog-save"
+      (onClickedEvent)="saveOrUpdateTransaction()"
+      label="Salvar"
+      [disabled]="transactionForm.invalid"
+    ></app-button>
   </div>
 </div>
